# skills_dashboard

deploy/: .env.example  docker-compose.yml
deploy/nginx/: default.conf
django_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
django_backend/backend/: settings.py  urls.py
django_backend/config/: models.py  serializers.py  urls.py  views.py
django_backend/config/management/commands/: check_verified_reference_ids.py
django_backend/config/migrations/: 0001_initial.py  0002_icpcambassadorapplication_is_included.py  0003_college.py  0004_populate_college.py  0005_icpcambassadorapplication_is_approved.py  0006_remove_icpcambassadorapplication_is_approved_and_more.py  0007_alter_icpcambassadorapplication_approval_status.py  0008_alter_icpcambassadorapplication_approval_status.py
django_backend/config/services/: sheet_sync.py
django_backend/config/views/: __init__.py  approval.py  college_stats.py  export_data.py  sync.py
django_backend/filehandler/: admin.py  models.py  urls.py  views.py
django_backend/filehandler/migrations/: 0001_initial.py
django_backend/filehandler/services/: file_handler.py  folder_access.py  multi_reference_upload.py
django_backend/filehandler/views/: __init__.py  bulk_file_upload.py  folder_access_view.py  student_folder.py  upload_to_many.py
nextjs_frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
nextjs_frontend/src/app/: layout.tsx  page.tsx
nextjs_frontend/src/components/: CollegeCard.tsx  FetchCleanedDataButton.tsx  FolderAccessModal.tsx  Sidebar.tsx  (+5 more)
(+31 files in other folders)
