[project]
name = "django-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "gspread>=6.1.4",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.198.0",
]
